tests/cases/standard-library/errors/boxed/std-boxed-put-in-different-zone.ari
fn main() -> i64 {
  var source = zone::create(64);
  var target = zone::create(64);
  var boxed = Box::new<i64>(ref mut source, 21);

  let moved = boxed.take();
  boxed.put_in(ref mut target, moved);

  return boxed.get();
}
